[project]
name = "pipeline-simulator"
version = "0.2.0"
description = "A pipeline parallelism simulator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "scipy>=1.15.2",
]

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.6",
    "types-networkx>=3.4.2.20250319",
]
